--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -53,15 +53,17 @@
     <span>{{ solicitacao.data_solicitacao.toLocaleDateString() }} </span>
    </div>
 
-   <div class="observacao">
-    <p><b>Observação:</b> {{solicitacao.observacao}}</p>
+   <div *ngIf="solicitacao.observacao !== undefined && solicitacao.observacao !== null">
+    <div class="observacao">
+        <p><b>Observação:</b> {{solicitacao.observacao}}</p>
+    </div>
    </div>
 
    <div class="buttonFechar">
     <button (click)="closeDialog()">Fechar</button>
    </div>
 
-   
+
 
   </div>
 </div>
