--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="cardConteudo">
-      <span><p>Data da solicitação: {{ formatarDataSolicitacao() }}</p></span>
+      <span><p>Data da solicitação: {{ solicitacao.dataSolicitacao }}</p></span>
     </div>
 
     <div class="buttonContainer">
