--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
@@ -53,8 +53,8 @@
 
 .buttonContainer {
   display: flex;
-  justify-content: space-between;
   padding: 16px;
+  justify-content: flex-end;
 }
 
 .buttonDetalhes {
