--- a/devII/src/app/modules/vagas-estagio/detalhes-vaga/detalhes-vaga.component.html
+++ b/devII/src/app/modules/vagas-estagio/detalhes-vaga/detalhes-vaga.component.html
@@ -17,9 +17,10 @@
         </div>
   
         <div class="descricao">
-          <span>Descrição da vaga: {{vaga.descricao}}</span>
-        </div>
-  
+          <h3>Descrição da vaga:</h3>
+          <span>{{vaga.descricao}}</span>
+        </div><br>
+        
         <div class="local">
           <span>Local: {{vaga.local}}</span>
         </div>
