--- a/devII/src/app/modules/vagas-estagio/cadastrar-vagas/cadastrar-vagas.component.scss
+++ b/devII/src/app/modules/vagas-estagio/cadastrar-vagas/cadastrar-vagas.component.scss
@@ -1,11 +1,4 @@
-body{font-size: 25px;}
-
-.espacamento{
-  padding: 1% 20% 0px 20%;
-}
-
-
-.tituloprincipal{
+.tituloprincipal1{
   font-size: 28px;
   font-weight: bold;
   color: #000000;
@@ -23,38 +16,62 @@ body{font-size: 25px;}
   margin-top: 6px;
 }
 
-.formulario{
-  font-size: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+
+body {
+  font-size: 16px;
 }
 
-.divtitulo{
-  display: flex;
-  flex-direction: column;
-  margin: 12px;
-}
 
-.titulo{
-  background: #FFFFFF;
-  border: 1px solid #000000;
+
+.formulario {
+  font-size: 16px;
+  font-weight: 400;
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f0f0f0;
   border-radius: 5px;
-  width: 530px;
-  height: 28px;
-  padding: 10px;
-  margin: 6px 0px 0px 0px;
 }
 
-.botao{
-  border: 0px solid #000000;
-  background: #2F9E41;
-  font-style: normal;
-  font-size: 25px;
-  color: #FFFFFF;
-  margin: 7px;
+.campo {
+  margin-bottom: 20px;
+}
+
+.campoDuplo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inputText {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.inputTextarea {
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  resize: vertical;
+  white-space: normal;
+}
+
+.botao {
+  padding: 30px 0px 20px 0px;
+  text-align: center;
+}
+
+.botaoCadastrar {
+  background-color: #2F9E41;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
   cursor: pointer;
 }
-
-
-
