--- a/devII/src/app/modules/vagas-estagio/detalhes-vaga/detalhes-vaga.component.scss
+++ b/devII/src/app/modules/vagas-estagio/detalhes-vaga/detalhes-vaga.component.scss
@@ -34,26 +34,41 @@
   }
   
   .empresa{
+    font-weight: 500;
     margin-bottom: 15px;
   }
   
   .agencia{
+    font-weight: 500;
     margin-bottom: 15px;
   }
   
-  .descricao{
-    margin-bottom: 15px;
+  
+  .descricao {
+    padding: 5px 20px 5px 10px;
+    white-space: pre-wrap;
+    outline: none;
+    border-color: #2B923C;
+    box-shadow: 0 0 5px #2B923C;
   }
+  
   
   .local{
+    font-weight: 500;
     margin-bottom: 15px;
+  }
+
+   h3{
+    font-weight: 500;
   }
   
   .valor{
+    font-weight: 500;
     margin-bottom: 15px;
   }
   
   .turno{
+    font-weight: 500;
     margin-bottom: 15px;
   }
   
