--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
@@ -20,8 +20,8 @@
       <select [(ngModel)]="filtroStatus" name="filtroStatus">
         <option value="em andamento">Em andamento</option>
         <option value="todas">Todas</option>
-        <option value="aprovado">Deferidas</option>
-        <option value="negado">Indeferidas</option>
+        <option value="deferidas">Deferidas</option>
+        <option value="indeferidas">Indeferidas</option>
         <!-- Ajustar para que apareça somente para setor de estágio essas opções:
         <option value="setor_estagios">Setor de Estágios</option>
         <option value="coordenador">Coordenador</option>
@@ -30,7 +30,7 @@
       <button type="submit">Filtrar</button>
     </form>
     </div>
-    
+
 
   <div class="solicitacao" *ngIf="listaSolicitacoes.length > 0; else semSolicitacoes">
     <div *ngFor="let solicitacao of listaSolicitacoes">
