--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
@@ -8,7 +8,7 @@
   font-weight: bold;
   color: #000000;
   display: flex;
-  padding: 2%;
+  padding: 2% 2% 0% 5%;
   align-items: flex-start;
   grid-template-columns: auto 1fr auto;
   grid-gap: 10px;
@@ -32,14 +32,20 @@
 
 .filtro-row {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 10px;
+  align-items: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 10%;
 }
-
 
 .filtro-row form {
   margin-right: 10px; /* Ajuste de espaçamento entre os forms */
+}
+
+.filtro-container {
+  display: flex;
+  flex-direction: column;
+  // padding: 0px 25px 0px 25px;
 }
 
 .semSolicitacoes {
@@ -48,12 +54,3 @@
   align-items: center;
   margin-top: 20px; /* Ajuste de espaçamento */
 }
-
-.filtro-container {
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-}
-
-
-
