--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
@@ -18,10 +18,10 @@
 
     <form (ngSubmit)="filtrarPorStatus()">
       <select [(ngModel)]="filtroStatus" name="filtroStatus">
-        <option value="em andamento">Em andamento</option>
-       
-        <option value="aprovado">Deferidas</option>
-        <option value="negado">Indeferidas</option>
+        <option value="Em Andamento">Em andamento</option>
+
+        <option value="Deferido">Deferidas</option>
+        <option value="Indeferido">Indeferidas</option>
         <!-- Ajustar para que apareça somente para setor de estágio essas opções:
         <option value="setor_estagios">Setor de Estágios</option>
         <option value="coordenador">Coordenador</option>
