--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.html
@@ -16,6 +16,13 @@
     <button mat-raised-button color="warn" mat-dialog-close class="close">
       Fechar
     </button>
-    <button mat-raised-button color="primary" (click)="enviar()">Enviar</button>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="enviar()"
+      routerLink="/listaSolicitacoesServidor"
+    >
+      Enviar
+    </button>
   </mat-dialog-actions>
 </div>
