pequenas alterações nos nomes do status

--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.html
@@ -29,8 +29,8 @@
       <select [(ngModel)]="filtroStatus" name="filtroStatus">
         <option value="Em Andamento">Em andamento</option>
 
-        <option value="aprovado">Deferidas</option>
-        <option value="negado">Indeferidas</option>
+        <option value="Deferido">Deferidas</option>
+        <option value="Indeferido">Indeferidas</option>
         <!-- Ajustar para que apareça somente para setor de estágio essas opções:
         <option value="setor_estagios">Setor de Estágios</option>
         <option value="coordenador">Coordenador</option>
